purchase options and utility nav edit

--- a/_includes/nav-wb-translate.html
+++ b/_includes/nav-wb-translate.html
@@ -6,18 +6,16 @@
           <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
           <li><a href="/contact">Find Us</a></li>
           <li><a href="/rentals">Rentals</a></li>
-          <li><a href="/product-catalogs">Catalogs</a></li>
+          <li><a href="/jobs">Careers</a></li>
+          <li><a href="/request-catalog">Request a Catalog</a></li>
           <li><a href="http://portal.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
-          <li><a href="/jobs">Careers</a></li>
           <li>
             <div class="dropdown social-share">
-              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">Social Media <i class="fa fa-share-alt"></i></a>
+              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">International <i class="fa fa-globe"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i> YouTube</a></li>
-                <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-                <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a></li>
-                <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+                <li><a href="#">English</a></li>
+                <li><a href="#">Spanish</a></li>
               </ul>
             </div>
           </li>
