--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,13 @@
           <li><a href="http://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
+        
+        <ul class="list-unstyled list-inline social">
+          <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+          <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i></a></li>
+          <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        </ul>
       </div>
 
       <div class="col-sm-3 padding-right-60 margin-top-30">
