start translations, misc updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/purchase-options">Purchase Options</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
