--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1550,25 +1550,30 @@
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Ozwide Pty Ltd Trading</h4>
+                    <h4>Drainchem Pty Ltd.</h4>
                     <p>
                     <span class="grey">Location:</span> Queensland, Australia<br/>
-                    <span class="grey">Phone:</span> (+61) 1300 781 359<br/>
+                    <span class="grey">Phone:</span> 1800 758 448<br/>
                     <span class="grey">Website:</span> <a href="http://www.drainchem.com.au" target="_blank">www.drainchem.com.au</a>
                     </p>
-                  </div>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>Sewer Equipment Co.</h4>
-                  <p>
-                  <span class="grey">Location:</span> NSW, Australia<br/>
-                  <span class="grey">Phone:</span> 02 9724 0433<br/>
-                  <span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a><br/>
-<!--                  <small><em>Serving New Zealand</em></small>-->
-                  </p>
                     <p>      
                     <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                     </p>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Sewer Equipment Co.</h4>
+                    <p>
+                    <span class="grey">Location:</span> NSW, Australia<br/>
+                    <span class="grey">Phone:</span> 02 9724 0433<br/>
+                    <span class="grey">Website:</span> <a href="http://www.seca.com.au" target="_blank">www.seca.com.au</a><br/>
+  <!--                  <small><em>Serving New Zealand</em></small>-->
+                    </p>
+                    <p>      
+                    <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                    </p>
+                  </div>
                 </div>
                 <div class="col-sm-4 dealer">
                   <h4>Spoutvac Industries Pty Ltd</h4>
