--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -170,6 +170,7 @@
               <li><a href="#china" class="region">China</a></li>
               <li><a href="#india" class="region">India</a></li>
               <li><a href="#japan" class="region">Japan</a></li>
+              <li><a href="#pakistan" class="region">Pakistan</a></li>
               <li><a href="#singapore" class="region">Singapore</a></li>
               <li><a href="#skorea" class="region">South Korea</a></li>
               <li><a href="#taiwan" class="region">Taiwan</a></li>
@@ -280,6 +281,23 @@
                   <span class="grey">Location:</span> Taito-ku, Tokyo<br/>
                   <span class="grey">Phone:</span> (+81) 3 3837 3381<br/>
                   <span class="grey">Website:</span> <a href="http://www.nlc-japan.com" target="_blank">www.nlc-japan.com</a>
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="pakistan">Pakistan</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <h4>MAC International</h4>
+                  <p>
+                  <span class="grey">Location:</span> Karachi, Pakistan<br/>
+                  <span class="grey">Phone:</span> (+92) 213 264 0348
                   </p>
                 </div>
               </div>
