Add links to translated websites"

--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -6,22 +6,25 @@
           <li><a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search.png" alt="Search" style="margin-top:-4px;" /></a></li>
           <li><a href="/contact">Find Us</a></li>
           <li><a href="/rentals">Rentals</a></li>
-          <li><a href="/jobs">Careers</a></li>
-          <li><a href="/request-catalog">Request a Catalog</a></li>
+          <li><a href="/product-catalogs">Catalogs</a></li>
           <li><a href="http://portal.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+          <li><a href="/jobs">Careers</a></li>
+<!-- SOCIAL MEDIA
           <li>
             <div class="dropdown social-share">
-              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">International <i class="fa fa-globe"></i></a>
+              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">Social Media <i class="fa fa-share-alt"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="#">English</a></li>
-                <li><a href="#">Spanish</a></li>
-                <li><a href="#">Portuguese</a></li>
-                <li><a href="#">German</a></li>
-                <li><a href="#">French</a></li>
-                <li><a href="#">Dutch</a></li>
+                <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i> YouTube</a></li>
+                <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+                <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a></li>
+                <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
               </ul>
             </div>
+          </li>
+-->
+          <li>
+            <a href="https://es.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:22px;" /></a> &nbsp;&nbsp;<a href="https://fr.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:22px;" /></a> &nbsp;&nbsp;<a href="https://de.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:22px;" /></a> &nbsp;&nbsp;<a href="https://br.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="Portuguese"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:22px;" /></a> &nbsp;<!--<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a>-->
           </li>
         </ul>
         <div class="lightbox" id="search-box">
@@ -80,5 +83,4 @@
       </div>
     </div>
   </div>
-  
 </nav>
