--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -98,6 +98,9 @@
     margin-bottom: 0;
     font-size: 10px;
   }
+  .warthog .heading-img img {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 605px) {
