misc manual updates - first commit after Poland

--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -70,8 +70,8 @@
       <a href="#surface" class="btn">Surfaces</a>
       <a href="#tank" class="btn">Tanks/Vessels</a>
       <a href="#boiler" class="btn">Boilers/Furnaces</a>
-      <a href="#concrete" class="btn">Concrete</a>
-      <a href="#tools" class="btn">Tools</a>
+<!--      <a href="#concrete" class="btn">Concrete</a>-->
+      <a href="#tools" class="btn">Rotary Tools/Nozzles</a>
       <a href="#swivels" class="btn">Swivels</a>
       <a href="#accessories" class="btn">Accessories</a>
       <a href="#" data-featherlight="#search-box"><img src="/assets/img/icon_search_lg.png" alt="Search" style="width:20px; margin-left:15px;" /></a>
