--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,6 +97,7 @@
   {% include contact-ohio.html %}
   {% include contact-la.html %}
   {% include contact-europe.html %}
+  {% include contact-nl.html %}
 
   <!-- landing page script dependencies -->
   {% include landing.html %}
