--- a/_includes/contact-europe.html
+++ b/_includes/contact-europe.html
@@ -1,4 +1,4 @@
-{% if page.contact-europe %}
+{% if page.contact-uk %}
 <!--Google Maps API-->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnRdGJxT3d0IKrd8fwWieECslVq_CReSA&amp;sensor=true"></script>
 <script>
@@ -25,7 +25,7 @@
     var marker = new google.maps.Marker({
       position: mapOptions.center,
       map: map,
-      title: 'StoneAge, Inc.'
+      title: 'StoneAge Europe'
     });  
     marker.addListener('click', function() {
       infowindow.open(map, marker);
