--- a/_includes/contact-ohio.html
+++ b/_includes/contact-ohio.html
@@ -25,7 +25,7 @@
     var marker = new google.maps.Marker({
       position: mapOptions.center,
       map: map,
-      title: 'StoneAge, Inc.'
+      title: 'StoneAge Ohio'
     });  
     marker.addListener('click', function() {
       infowindow.open(map, marker);
