--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -869,11 +869,28 @@
         <div id="wb-mideast" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-mideast">
           <div class="dealers-by-region">
             <ul class="list-inline">
+              <li><a href="#Azerbaijan" class="region">Azerbaijan</a></li>
               <li><a href="#Turkey" class="region">Turkey</a></li>
               <li><a href="#UAE" class="region">United Arab Emirates</a></li>
             </ul>
           </div>
           <ul class="list-group">
+            <li class="list-group-item">
+              <h2 id="Azerbaijan">Azerbaijan</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Royalton Holdings</h4>
+                    <p>
+                    <span class="grey">Location:</span> Baku, Azerbaijan<br/>
+                    <span class="grey">Phone:</span> (+90) 312 395 8521<br/>
+                    <span class="grey">Website:</span> <a href="http://www.royaltonholdings.com" target="_blank">www.royaltonholdings.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
             <li class="list-group-item">
               <h2 id="Turkey">Turkey</h2>
               <!-- 1st row -->
@@ -883,7 +900,7 @@
                     <h4>Kamat Su Jeti Teknolojisi</h4>
                     <p>
                     <span class="grey">Location:</span> Ostem  Ankara<br/>
-                    <span class="grey">Phone:</span> (+90) 312 395 8521<br/>
+                    <span class="grey">Phone:</span> (+994 12 4640144<br/>
                     <span class="grey">Website:</span> <a href="http://www.kamat.com.tr" target="_blank">www.kamat.com.tr</a>
                     </p>
                   </div>
