FTP, ABX-3L-V2, misc updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,9 @@
           <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i></a></li>
           <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i></a></li>
         </ul>
+        
+        <a href="https://itunes.apple.com/us/app/stoneage-waterblast-tools/id1119374675?mt=8" target="_blank"><img src="/assets/img/thumb/app-store-badge.png" alt="Download StoneAge mobile app from App Store" style="max-width:100px; display:inline; margin-left:-7px;"></a> <a href="https://play.google.com/store/apps/details?id=com.bf.app6d94cd" target="_blank"><img src="/assets/img/thumb/google-play-badge.png" alt="Download StoneAge mobile app from Google Play" style="max-width:100px; display:inline;">
+        </a>
       </div>
 
       <div class="col-sm-3 padding-right-60 margin-top-30">
