--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -721,6 +721,14 @@
                     <p>StoneAge is pleased to sell direct to our customers in Brazil.<br><strong>Please contact our Sales &amp; Support Team at +1 (970) 259-2869</strong>.
                     </p>
                   </div>
+                  <div class="dealer">
+                    <h4>Flow Latino</h4>
+                    <p>
+                    <span class="grey">Location:</span> São Paulo<br/>
+                    <span class="grey">Phone:</span> +55-11-3616-2820<br/>
+                    <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com" target="_blank">www.flowwaterjet.com</a>
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="row text-right">
