--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -778,7 +778,7 @@
                     <h4>Aquatool</h4>
                     <p>
                     <span class="grey">Location:</span> Bogota<br/>
-                    <span class="grey">Phone:</span> (+571) 2447920<br/>
+                    <span class="grey">Phone:</span> +57 (1) 4077083<br/>
                     <span class="grey">Website:</span> <a href="http://www.aquatool.net" target="_blank">www.aquatool.net</a>
                     </p>
                   </div>
