WJTA + misc updates

--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -16,7 +16,7 @@
         <div class="panel-heading" role="tab" id="heading-dh-asia">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion3" href="#dh-asia" aria-expanded="false" aria-controls="dh-asia">
-              Asia <i class="fa fa-plus"></i>
+              China <i class="fa fa-plus"></i>
             </a>
           </h4>
         </div>
