PA catalog updates, misc

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1445,11 +1445,11 @@
               <h2 id="wv">West Virginia</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>NorMont Equipment Co.</h4>
+                  <h4>502 Equipment</h4>
                   <p>
-                  <span class="grey">Location:</span> Black Eagle, MT<br/>
-                  <span class="grey">Phone:</span> 406 453 4344<br/>
-                  <span class="grey">Website:</span> <a href="http://www.nmeqco.com" target="_blank">www.nmeqco.com</a>
+                  <span class="grey">Location:</span> Louisville, KY<br/>
+                  <span class="grey">Phone:</span> 502 536 9125<br/>
+                  <span class="grey">Website:</span> <a href="https://502equipment.com/" target="_blank">www.502equipment.com</a>
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
