--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1283,6 +1283,20 @@
               <h2 id="tn">Tennessee</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
+                  <h4>Amazing Machinery</h4>
+                  <p>
+                  <span class="grey">Location:</span> Cleveland, TN<br/>
+                  <span class="grey">Phone:</span> 800 504 7435<br/>
+                  <span class="grey">Website:</span> <a href="https://amazingmachinery.com/" target="_blank">www.amazingmachinery.com</a>
+                  </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />        
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
                   <h4>Sansom Equipment Company</h4>
                   <p>
                   <span class="grey">Location:</span> Shelbyville, TN<br/>
