--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -682,7 +682,7 @@
         <div id="wb-lamerica" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-lamerica">
           <div class="dealers-by-region">
             <ul class="list-inline">
-              <li><a href="#Argentina" class="region">Argentina</a></li>
+<!--              <li><a href="#Argentina" class="region">Argentina</a></li>-->
               <li><a href="#Brazil" class="region">Brazil</a></li>
               <li><a href="#Chile" class="region">Chile</a></li>
               <li><a href="#Colombia" class="region">Colombia</a></li>
@@ -691,9 +691,10 @@
             </ul>
           </div>
           <ul class="list-group">
+<!--
             <li class="list-group-item">
               <h2 id="Argentina">Argentina</h2>
-              <!-- 1st row -->
+               1st row 
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
@@ -712,6 +713,7 @@
                 </a>
               </div>
             </li>
+-->
             <li class="list-group-item">
               <h2 id="Brazil">Brazil</h2>
               <!-- 1st row -->
