dealer and translation updates

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -41,7 +41,7 @@
             </div>
             <div class="dealers-by-region col-sm-2">
               <ul class="list-unstyled">
-                <li><a href="#ml" class="region">Maryland</a></li>
+                <li><a href="#md" class="region">Maryland</a></li>
                 <li><a href="#ma" class="region">Massachusetts</a></li>
                 <li><a href="#mi" class="region">Michigan</a></li>
                 <li><a href="#mn" class="region">Minnesota</a></li>
@@ -706,6 +706,19 @@
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br />
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
+                <h4>Virginia Public Works Equipment</h4>
+                <p>
+                <span class="grey">Location:</span> Mechanicsville, VA<br/>
+                <span class="grey">Phone:</span> 804 703 4040<br/>
+                <span class="grey">Website:</span> <a href="http://www.vpwe.com/" target="_blank">www.vpwe.com</a>
+                </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
                   </p>
                 </div>
               </div>
@@ -1400,11 +1413,11 @@
               <h2 id="va">Virginia</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                <h4>MSC Equipment</h4>
+                <h4>Virginia Public Works Equipment</h4>
                 <p>
-                <span class="grey">Location:</span> Oilville, VA<br/>
-                <span class="grey">Phone:</span> 800 969 1672<br/>
-                <span class="grey">Website:</span> <a href="http://www.mscequip.net" target="_blank">www.mscequip.net</a>
+                <span class="grey">Location:</span> Mechanicsville, VA<br/>
+                <span class="grey">Phone:</span> 804 703 4040<br/>
+                <span class="grey">Website:</span> <a href="http://www.vpwe.com/" target="_blank">www.vpwe.com</a>
                 </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
