--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -16,7 +16,7 @@
             <ul class="list-inline">
               <li><a href="#wb-ca" class="region">California</a></li>
               <li><a href="#wb-fl" class="region">Florida</a></li>
-              <li><a href="#wb-la" class="region">Louisiana</a></li>
+<!--              <li><a href="#wb-la" class="region">Louisiana</a></li>-->
               <li><a href="#wb-tx" class="region">Texas</a></li>
             </ul>
           </div>
@@ -73,9 +73,9 @@
                 </a>
               </div>
             </li>
+<!--
             <li class="list-group-item">
               <h2 id="wb-la">Louisiana</h2>
-              <!-- 1st row -->
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
@@ -94,6 +94,7 @@
                 </a>
               </div>
             </li>
+-->
             <li class="list-group-item">
               <h2 id="wb-tx">Texas</h2>
               <!-- 1st row -->
