--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -8,7 +8,7 @@
           <li><a href="/rentals">Rentals</a></li>
           <li><a href="/product-catalogs">Catalogs</a></li>
           <li><a href="http://portal.stoneagetools.com" target="_blank">Portal Login</a></li>
-          <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+          <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting Calculator</a></li>
           <li><a href="/jobs">Careers</a></li>
           <li>
             <a href="https://es.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:20px;" /></a> &nbsp;&nbsp;<a href="https://fr.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:20px;" /></a> &nbsp;&nbsp;<a href="https://de.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:20px;" /></a> &nbsp;&nbsp;<a href="https://br.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="Portuguese"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:20px;" /></a> &nbsp;<a href="https://nl.stoneagetools.com/" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:20px;" /></a>
