--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -194,11 +194,11 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Beijing Far East Cleaning  Co., Ltd</h4>
+                    <h4>Guangzhou Leadjetting Technology Co., Ltd.</h4>
                     <p>
-                    <span class="grey">Location:</span> Beijing<br/>
-                    <span class="grey">Phone:</span> (+86) 10 649 44847<br/>
-                    <span class="grey">Website:</span> <a href="http://www.bjydqx.com" target="_blank">www.bjydqx.com</a>
+                    <span class="grey">Location:</span> Guangzhou<br/>
+                    <span class="grey">Phone:</span> (+86) 18011829862<br/>
+                    <span class="grey">Website:</span> <a href="http://www.leadjetting.com/" target="_blank">www.leadjetting.com</a>
                     </p>
                   </div>
                 </div>
@@ -209,39 +209,6 @@
                     <span class="grey">Location:</span> Nanjing<br/>
                     <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
                     <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- 2nd row -->
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>Shanghai Gaoao Environmental Science and Technology Co., Ltd</h4>
-                    <p>
-                    <span class="grey">Location:</span> Shanghai<br/>
-                    <span class="grey">Phone:</span> (+86) 21 67830178<br/>
-                    <span class="grey">Website:</span> <a href="http://www.gaoaohb.com" target="_blank">www.gaoaohb.com</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>SpirStar China Co., Ltd</h4>
-                    <p>
-                    <span class="grey">Location:</span> Shanghai, China<br/>
-                    <span class="grey">Phone:</span> (+86) 021 3463 5159<br/>
-                    <span class="grey">Website:</span> <a href="http://www.spirstarchina.com" target="_blank">www.spirstarchina.com</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>Tianjin City Jingcheng High-Pressure Pump Co., Ltd</h4>
-                    <p>
-                    <span class="grey">Location:</span> Tianjin, China<br/>
-                    <span class="grey">Phone:</span> (+86) 022 88822281<br/>
-                    <span class="grey">Website:</span> <a href="http://www.tjjingcheng.cn" target="_blank">www.tjjingcheng.cn</a>
                     </p>
                   </div>
                 </div>
@@ -411,24 +378,6 @@
                   <span class="grey">Location:</span>  Thornhill, Ontario<br/>
                   <span class="grey">Phone:</span> 905-889-5237<br/>
                   <span class="grey">Website:</span> <a href="http://www.imscanada.com/" target="_blank">www.imscanada.com</a>
-                  </p>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>Joe Johnson Equipment</h4>
-                  <p><span class="text-danger"><i class="fa fa-tachometer"></i> <i class="fa fa-wrench"></i> <em>Authorized Automation, Parts &amp; Tools</em></span><br />
-                  <span><i class="fa fa-truck"></i> <em>Authorized Rental Center</em></span><br />
-                  <span class="grey">Location:</span>  Edmonton, Alberta<br/>
-                  <span class="grey">Phone:</span> 800-263-1262<br/>
-                  <span class="grey">Website:</span> <a href="http://www.jjei.com/" target="_blank">www.jjei.com</a>
-                  </p>
-                </div>
-                <div class="col-sm-4 dealer">
-                  <h4>Joe Johnson Equipment</h4>
-                  <p><span class="text-danger"><i class="fa fa-tachometer"></i> <i class="fa fa-wrench"></i> <em>Authorized Automation, Parts &amp; Tools</em></span><br />
-                  <span><i class="fa fa-truck"></i> <em>Authorized Rental Center</em></span><br />
-                  <span class="grey">Location:</span>  Innisfil, Ontario<br/>
-                  <span class="grey">Phone:</span> 800-263-1262<br/>
-                  <span class="grey">Website:</span> <a href="http://www.jjei.com/" target="_blank">www.jjei.com</a>
                   </p>
                 </div>
               </div>
