stoneage solutions name change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
           <li><a href="http://news.stoneagetools.com/topic/product-bulletins">Product Bulletins</a><i class="fa fa-angle-right"></i>
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/purchase-options">Purchase Options</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/solutions">StoneAge Solutions</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
