StoneAge Training, terms, and misc

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,10 @@
           <li><a href="/manuals">Product Manuals</a><i class="fa fa-angle-right"></i>
           <li><a href="http://news.stoneagetools.com/topic/product-bulletins">Product Bulletins</a><i class="fa fa-angle-right"></i>
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/purchase-options">Purchase Options</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/solutions">StoneAge Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/training">StoneAge Training</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
@@ -62,7 +63,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2018 &copy; All Rights Reserved. <a href="/patents">Patents</a> | <a href="/trademarks">Trademarks</a> | <a href="/terms">Terms</a> | <a href="/warranty">Warranty</a>
+        <p>2019 &copy; All Rights Reserved. <a href="/patents">Patents</a> | <a href="/trademarks">Trademarks</a> | <a href="/terms">Terms</a> | <a href="/warranty">Warranty</a>
         </p>
       </div>
       <div class="col-md-1">
