--- a/_includes/nav-wb.html
+++ b/_includes/nav-wb.html
@@ -43,6 +43,7 @@
           <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp;<br/>Equipment</a></li>
           <li><a href="/sewer-tools">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
           <li><a href="/downhole-tools">Downhole<br/>Tools</a></li>
+          <li><a href="/training">StoneAge<br/>Training</a></li>
         </ul>
       </div>
     </div>
